# api/gateway/src/main/resources/static/member-openapi3.yaml
@@ -32,7 +32,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/v1-member-register-946372771'
+                $ref: '#/components/schemas/v1-member-email-check-946372771'
               examples:
                 '로그인 API - 실패: 로그인 정보':
                   value: "{\"errorCode\":401,\"errorMessage\":\"아이디 또는 비밀번호를 확인해주세\
@@ -46,8 +46,8 @@ paths:
               examples:
                 로그인 API - 성공:
                   value: "{\"code\":200,\"message\":\"정상 처리되었습니다.\",\"data\":{\"accessToken\"\
-                    :\"eyJhbGciOiJIUzUxMiJ9.eyJpZCI6Niwic3ViIjoidGVzdEBuYXZlci5jb20iLCJpYXQiOjE3MTgxMTY1MzgsImV4cCI6MTcxODExODMzOCwicm9sZXMiOiJST0xFX1VTRVIifQ.O13i_tXuD5z4rvGQQaVq_HvrQOJGcKMSn0PzcgP8rQvfvRe6l8VQbCTLeD8PgRRKXQqwZdebInZWzsw2A3Wg1Q\"\
-                    ,\"refreshToken\":\"eyJhbGciOiJIUzUxMiJ9.eyJpZCI6Niwic3ViIjoidGVzdEBuYXZlci5jb20iLCJpYXQiOjE3MTgxMTY1MzgsImV4cCI6MTcxODIwMjkzOCwicm9sZXMiOiJST0xFX1VTRVIifQ.hWyFyAYt8CEAv-Tl5M77dLeIaVtLIQDmt98tuGSNfIBf8X0WXjCJdhLVMyTac-l5WPy9NCTY31bHLdDr3j7rzA\"\
+                    :\"eyJhbGciOiJIUzUxMiJ9.eyJpZCI6Niwic3ViIjoidGVzdEBuYXZlci5jb20iLCJpYXQiOjE3MTgyMDQwNTQsImV4cCI6MTcxODIwNTg1NCwicm9sZXMiOiJST0xFX1VTRVIifQ.dsYzb18k69oZknW5Xl3FuVaiB4UFne9JfrldbFqeuoH7Zu7jCKJhoxvAmZL1BRTBSOgnTueoj1EYLqyaReuiAQ\"\
+                    ,\"refreshToken\":\"eyJhbGciOiJIUzUxMiJ9.eyJpZCI6Niwic3ViIjoidGVzdEBuYXZlci5jb20iLCJpYXQiOjE3MTgyMDQwNTQsImV4cCI6MTcxODI5MDQ1NCwicm9sZXMiOiJST0xFX1VTRVIifQ.p01XvULFOvndiNRSbt9uFXpA5MFwY1Vdz_66x6wxrBGuT_vuZMEe5LAoxRtlFlZSxjpdhoqfWeHrImzhnW1esw\"\
                     }}"
         "400":
           description: "400"
@@ -97,8 +97,8 @@ paths:
                   value: "{\"errorCode\":400,\"errorMessage\":\"입력값에 대한 검증에 실패했습니다\
                     .\",\"validation\":{\"password\":\"비밀번호는 최소 6자 이상 입력해주세요.\",\"\
                     passwordConfirm\":\"비밀번호 확인은 최소 6자 이상 입력해주세요.\",\"nickName\":\"\
-                    닉네임은 2자 이상 8자 이하로 입력해주세요.\",\"birthDate\":\"생년월일을 올바르게 입력해주세요\
-                    .\",\"email\":\"유효하지 않은 이메일 형식입니다.\"}}"
+                    닉네임은 필수 항목입니다.\",\"birthDate\":\"생년월일을 올바르게 입력해주세요.\",\"email\"\
+                    :\"유효하지 않은 이메일 형식입니다.\"}}"
         "201":
           description: "201"
           content:
@@ -114,11 +114,91 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/v1-member-register-946372771'
+                $ref: '#/components/schemas/v1-member-email-check-946372771'
               examples:
                 '회원 API - 실패: 중복 회원':
                   value: "{\"errorCode\":409,\"errorMessage\":\"이미 등록된 회원 이메일입니다.\"\
                     }"
+  /v1/member/email/check:
+    get:
+      tags:
+      - 회원 API
+      summary: 이메일 중복체크
+      description: 이메일 중복체크
+      operationId: '이메일 중복체크 API - '
+      responses:
+        "200":
+          description: "200"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/v1-member-email-check1575598845'
+              examples:
+                이메일 중복체크 API - 성공:
+                  value: "{\"code\":200,\"message\":\"사용이 가능한 이메일입니다.\"}"
+        "409":
+          description: "409"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/v1-member-email-check-946372771'
+              examples:
+                '이메일 중복체크 API - 실패: 이미 존재하는 이메일':
+                  value: "{\"errorCode\":409,\"errorMessage\":\"이미 등록된 회원 이메일입니다.\"\
+                    }"
+  /v1/member/nick-name/check:
+    get:
+      tags:
+      - 회원 API
+      summary: 닉네임 중복체크
+      description: 닉네임 중복체크
+      operationId: '닉네임 중복체크 API - '
+      responses:
+        "200":
+          description: "200"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/v1-member-email-check1575598845'
+              examples:
+                닉네임 중복체크 API - 성공:
+                  value: "{\"code\":200,\"message\":\"사용이 가능한 닉네임입니다.\"}"
+        "409":
+          description: "409"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/v1-member-email-check-946372771'
+              examples:
+                '닉네임 중복체크 API - 실패: 이미 존재하는 닉네임':
+                  value: "{\"errorCode\":409,\"errorMessage\":\"이미 등록된 닉네임입니다.\"}"
+  /v1/member/phone-num/check:
+    get:
+      tags:
+      - 회원 API
+      summary: 핸드폰 번호 중복체크
+      description: 핸드폰 번호 중복체크
+      operationId: '핸드폰 번호 중복체크 API - '
+      responses:
+        "409":
+          description: "409"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/v1-member-email-check-946372771'
+              examples:
+                '핸드폰 번호 중복체크 API - 실패: 이미 존재하는 휴대폰 번호':
+                  value: "{\"errorCode\":409,\"errorMessage\":\"이미 등록된 휴대폰 번호입니다.\"\
+                    }"
+        "200":
+          description: "200"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/v1-member-email-check1575598845'
+              examples:
+                핸드폰 번호 중복체크 API - 성공:
+                  value: "{\"code\":200,\"message\":\"사용이 가능한 전화번호입니다.\"}"
   /v1/member/token/refresh:
     get:
       tags:
@@ -136,15 +216,15 @@ paths:
               examples:
                 토큰 재발급 API - 성공:
                   value: "{\"code\":200,\"message\":\"정상 처리되었습니다.\",\"data\":{\"accessToken\"\
-                    :\"eyJhbGciOiJIUzUxMiJ9.eyJpZCI6MSwic3ViIjoiYWRtaW5AZ21haWwuY29tIiwiaWF0IjoxNzE4MTE2NTQ4LCJleHAiOjE3MTgxMTgzNDgsInJvbGVzIjoiUk9MRV9BRE1JTiJ9.rw-lxSZvQs3e-waRG5Du4n8mGZJZ7L2DT9u7T1VdjLpsclABVVwpvGGg7Iz2WqXMK5a-YlVdC8d5YNaBw38cUw\"\
-                    ,\"refreshToken\":\"eyJhbGciOiJIUzUxMiJ9.eyJpZCI6MSwic3ViIjoiYWRtaW5AZ21haWwuY29tIiwiaWF0IjoxNzE4MTE2NTQ4LCJleHAiOjE3MTgyMDI5NDgsInJvbGVzIjoiUk9MRV9BRE1JTiJ9.M6oHF1huVmSnmNNH0CrEPiXzNktHrK0nH5RX5YMuhDaFXkmUpWdubOUpyFYj76Qyq_goUYnFl1Qo2E14DjJSyQ\"\
+                    :\"eyJhbGciOiJIUzUxMiJ9.eyJpZCI6MSwic3ViIjoiYWRtaW5AZ21haWwuY29tIiwiaWF0IjoxNzE4MjA0MDY0LCJleHAiOjE3MTgyMDU4NjQsInJvbGVzIjoiUk9MRV9BRE1JTiJ9.jf5SUXnvbSpAEk1x-bv_nFbR6UCpX5sC5GgjvqzCmUSejGCWB-qmChwSA1rDkJ1SquZJYvn6fNaLmWucCslxPg\"\
+                    ,\"refreshToken\":\"eyJhbGciOiJIUzUxMiJ9.eyJpZCI6MSwic3ViIjoiYWRtaW5AZ21haWwuY29tIiwiaWF0IjoxNzE4MjA0MDY0LCJleHAiOjE3MTgyOTA0NjQsInJvbGVzIjoiUk9MRV9BRE1JTiJ9.AfStBCJmGA8O8Yw7k357o5qWrXtZveBXl8IMOzKnyjxu02in0oigWQBtIgEy8413Goh3DSMUVFYMtLOMyxAbkg\"\
                     }}"
         "403":
           description: "403"
           content:
             application/json;charset=UTF-8:
               schema:
-                $ref: '#/components/schemas/v1-member-register-946372771'
+                $ref: '#/components/schemas/v1-member-email-check-946372771'
               examples:
                 '토큰 재발급 API - 실패: 권한 없음':
                   value: "{\"errorCode\": 403, \"errorMessage\": \"접근 권한이 없습니다.\"}"
@@ -153,7 +233,7 @@ paths:
           content:
             application/json;charset=UTF-8:
               schema:
-                $ref: '#/components/schemas/v1-member-register-946372771'
+                $ref: '#/components/schemas/v1-member-email-check-946372771'
               examples:
                 '토큰 재발급 API - 실패: 토큰 없음':
                   value: "{\"errorCode\":401,\"errorMessage\":\"토큰이 존재하지 않습니다.\"}"
@@ -162,7 +242,7 @@ paths:
                     .\"}"
             application/json:
               schema:
-                $ref: '#/components/schemas/v1-member-register-946372771'
+                $ref: '#/components/schemas/v1-member-email-check-946372771'
               examples:
                 '토큰 재발급 API - 실패: 리프래시 토큰 불일치':
                   value: "{\"errorCode\":401,\"errorMessage\":\"정상적인 토큰이 아닙니다. 확인\
@@ -199,7 +279,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/v1-member-register-946372771'
+                $ref: '#/components/schemas/v1-member-email-check-946372771'
               examples:
                 '이메일 인증 코드 확인 API - 실패: 인증 코드 불일치':
                   value: "{\"errorCode\":401,\"errorMessage\":\"인증 코드가 일치하지 않습니다.\"\
@@ -214,7 +294,7 @@ paths:
                 '이메일 인증 코드 확인 API - 실패: 필드 유효성':
                   value: "{\"errorCode\":400,\"errorMessage\":\"입력값에 대한 검증에 실패했습니다\
                     .\",\"validation\":{\"authCode\":\"인증 코드는 필수 항목입니다.\",\"email\"\
-                    :\"유효하지 않은 이메일 형식입니다.\"}}"
+                    :\"이메일은 필수 항목입니다.\"}}"
                 '이메일 인증 코드 확인 API - 실패: 인증 코드 요청 필요':
                   value: "{\"errorCode\":400,\"errorMessage\":\"이메일 인증 정보가 확인되지 않습\
                     니다. 확인 후 다시 시도해주세요.\"}"
@@ -223,7 +303,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/v1-member-email-auth-confirm1575598845'
+                $ref: '#/components/schemas/v1-member-email-check1575598845'
               examples:
                 이메일 인증 코드 확인 API - 성공:
                   value: "{\"code\":200,\"message\":\"이메일 인증이 정상적으로 처리되었습니다.\"}"
@@ -264,7 +344,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/v1-member-email-auth-confirm1575598845'
+                $ref: '#/components/schemas/v1-member-email-check1575598845'
               examples:
                 이메일 인증 코드 요청 API - 성공:
                   value: "{\"code\":200,\"message\":\"인증 메일이 정상적으로 발송되었습니다.\"}"
@@ -273,7 +353,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/v1-member-register-946372771'
+                $ref: '#/components/schemas/v1-member-email-check-946372771'
               examples:
                 '이메일 인증 코드 요청 API - 실패: 이메일 서버 이슈':
                   value: "{\"errorCode\":504,\"errorMessage\":\"이메일 전송에 실패했습니다.\"}"
@@ -282,7 +362,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/v1-member-register-946372771'
+                $ref: '#/components/schemas/v1-member-email-check-946372771'
               examples:
                 '이메일 인증 코드 요청 API - 실패: 이미 등록 된 이메일':
                   value: "{\"errorCode\":409,\"errorMessage\":\"이미 등록된 회원 이메일입니다.\"\
@@ -307,7 +387,7 @@ components:
         message:
           type: string
           description: 상태 메시지
-    v1-member-email-auth-confirm1575598845:
+    v1-member-email-check1575598845:
       type: object
       properties:
         code:
@@ -337,7 +417,7 @@ components:
         email:
           type: string
           description: 이메일(계정)
-    v1-member-register-946372771:
+    v1-member-email-check-946372771:
       type: object
       properties:
         errorMessage:
